--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.6.3"
+        "@fortawesome/fontawesome-free": "^5.6.3",
+        "vue-izitoast": "^1.1.2"
     }
 }
