--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.6.3",
-        "vue-izitoast": "^1.1.2"
+        "vee-validate": "^2.1.5",
+        "vue-izitoast": "^1.1.2",
+        "vue-router": "^3.0.2",
+        "vuex": "^3.0.1"
     }
 }
