--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.6.3",
+        "tributejs": "^3.5.0",
         "vee-validate": "^2.1.5",
         "vue-izitoast": "^1.1.2",
         "vue-router": "^3.0.2",
+        "vue-tribute": "^1.0.1",
         "vuex": "^3.0.1"
     }
 }
