--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.6.3",
+        "moment": "^2.24.0",
         "tributejs": "^3.5.0",
         "vee-validate": "^2.1.5",
         "vue-izitoast": "^1.1.2",
